argo/network-policies/templates/plex-allow-32400.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-allow-32400
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 32400
