argo/network-policies/templates/transmission-allow-nodeport-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: transmission-allow-peer-port-ingress
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transmission
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 30000
          endPort: 32767
        - protocol: UDP
          port: 30000
          endPort: 32767
